<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧班级</string>
    <!--  -->
    <string name="action_settings">Settings</string>
    <!--  -->
    <string name="title_activity_logon">LogonActivity</string>
    <string name="title_activity_main">我的考勤</string>
    <string name="title_activity_insert">考勤录入</string>
    <string name="title_activity_check">统计查看</string>
    <string name="title_activity_management">人员管理</string>
    <string name="title_activity_help">使用帮助</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_personal">人员信息</string>
    <string name="title_activity_summary">周汇总</string>

    <!--  -->
    <string name="hello_world">Hello world!</string>
    <!--  -->
    <string name="about_check">检查更新</string>
    <string name="about_help">使用帮助</string>
    <string name="about_copyright">版权声明</string>
    <string name="about_author">济南信息工程学-物联网工作室"</string>
    <string name="about_mail">邮箱：Jevon3@163.com</string>
    <string name="about_qq">QQ:1599937006</string>
    <string name="about_problem">问题反馈</string>

    <!--  -->
    <string name="insert_date">请选择则日期</string>
    <string name="insert_item">请选择项目</string>
    <string name="insert_name">姓名</string>
    <string name="insert_info">出勤情况</string>
    <string name="insert_commit">提交</string>
    <!--  -->
    <string name="logon_title">智慧班级考勤系统</string>
    <string name="logon_subtitle">用户登录</string>
    <string name="logon_username">用户名：</string>
    <string name="logon_password">密&#160;&#160;&#160;码：</string>
    <string name="logon_remember">记住密码</string>
    <string name="logon_logon">登  录</string>
    <!--  -->
    <string name="main_data">日期</string>
    <string name="main_item">项目</string>
    <string name="main_info">出勤情况</string>
    <!--  -->
    <string name="mana_name">姓名：</string>
    <string name="mana_query">查询</string>
    <string name="mana_queryall">查询全部</string>
    <string name="mana_add">添加人员</string>
    <!--  -->
    <string name="person_name">姓名</string>
    <string name="person_sex">性别</string>
    <string name="person_class">班级</string>
    <string name="person_username">用户名</string>
    <string name="person_password">密码</string>
    <string name="person_xueji">学籍号</string>
    <string name="person_birth">出生日期</string>
    <string name="person_quanxian">权限</string>
    <!--  -->
    <string name="dialog_old">旧密码:</string>
    <string name="dialog_new">新密码：</string>
    <string name="dialog_queren">确认密码：</string>
    <!--  -->
    <string name="radio_chu">出勤</string>
    <string name="radio_que">缺勤</string>
    <string name="radio_chi">迟到</string>
    <string name="radio_jia">请假</string>
    <!--  -->
    <string name="pop_change">修改</string>
    <string name="pop_delete">删除</string>
    <!--  -->
    <string name="head_insert">&#160;&#160;考勤录入</string>
    <string name="head_check">&#160;&#160;统计查看</string>
    <string name="head_person">&#160;&#160;人员管理</string>
    <string name="head_xiugai">&#160;&#160;修改密码</string>
    <string name="head_about">&#160;&#160;关于</string>
    <string name="head_logput">退出登录</string>


</resources>