<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layouthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/headbg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/menu_me" />

        <TextView
            android:id="@+id/textViewsname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewsclass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutmenu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layouthead"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/linearskaoqin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/menu_kaoqin"
            android:gravity="center_vertical"
            android:text="@string/head_insert"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#b4b4b4" />

        <TextView
            android:id="@+id/linearstongji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/menu_tongji"
            android:gravity="center_vertical"
            android:text="@string/head_check"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#b4b4b4" />

        <TextView
            android:id="@+id/linearsrenyuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/menu_guanli"
            android:gravity="center_vertical"
            android:text="@string/head_person"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutmenu1"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/linearsmima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/menu_mima"
            android:gravity="center_vertical"
            android:text="@string/head_xiugai"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#b4b4b4" />

        <TextView
            android:id="@+id/linearsbangzhu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/menu_about"
            android:gravity="center_vertical"
            android:text="@string/head_about"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonslogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:text="@string/head_logput" />

</RelativeLayout>