<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jnxxgc.smartclass.AboutActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_about"
        android:padding="@dimen/dp10">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@+id/imageView1"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/app_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:layout_marginTop="20dp"
            android:background="@drawable/linearlayout"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textViewupdataapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawableEnd="@drawable/menu_right"
                android:gravity="center_vertical"
                android:text="@string/about_check"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#b4b4b4" />

            <TextView
                android:id="@+id/textViewhelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawableEnd="@drawable/menu_right"
                android:gravity="center_vertical"
                android:text="@string/about_help"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#b4b4b4" />

            <TextView
                android:id="@+id/textViewcopyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawableEnd="@drawable/menu_right"
                android:gravity="center_vertical"
                android:text="@string/about_copyright"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/about_problem"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textProblem"
            android:background="@drawable/linearlayout"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textViewQQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawableEnd="@drawable/menu_right"
                android:gravity="center_vertical"
                android:text="@string/about_qq"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#b4b4b4" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawableEnd="@drawable/menu_right"
                android:gravity="center_vertical"
                android:text="@string/about_mail"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/about_author" />
    </RelativeLayout>


</RelativeLayout>