<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    tools:context="com.jnxxgc.smartclass.InsertActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_insert"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp10"
        android:layout_below="@id/toolbar_insert">

        <EditText
            android:id="@+id/editdate_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:hint="@string/insert_date"
            android:inputType="text" />

        <EditText
            android:id="@+id/edititem_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editdate_insert"
            android:layout_margin="5dp"
            android:hint="@string/insert_item"
            android:inputType="text" />


        <Button
            android:id="@+id/buttonCommit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/insert_commit" />

        <ListView
            android:id="@+id/listViewinsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonCommit"
            android:layout_below="@id/edititem_insert" />

    </RelativeLayout>


</RelativeLayout>