<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_old" />

        <EditText
            android:labelFor="@+id/editTextold"
            android:id="@+id/editTextold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_astomsphere_normal_low"
            android:inputType="textPassword" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_new" />

        <EditText
            android:labelFor="@+id/editTextnew"
            android:id="@+id/editTextnew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_astomsphere_normal_low"
            android:inputType="textPassword" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_queren" />

        <EditText
            android:labelFor="@+id/editTextnew2"
            android:id="@+id/editTextnew2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_astomsphere_normal_low"
            android:inputType="textPassword" >
        </EditText>
    </LinearLayout>

</LinearLayout>